--- a/package.json
+++ b/package.json
@@ -30,13 +30,17 @@
     "@mui/lab": "^5.0.0-alpha.167",
     "@mui/material": "^5.15.12",
     "@mui/system": "^5.15.12",
+    "@mui/x-date-pickers": "^7.22.0",
     "@svgr/webpack": "^8.1.0",
     "@vitejs/plugin-react": "^4.2.1",
     "apexcharts": "^3.49.0",
     "axios": "^1.7.7",
+    "dayjs": "^1.11.13",
     "formik": "^2.4.5",
     "framer-motion": "^11.0.8",
+    "install": "^0.13.0",
     "lodash": "^4.17.21",
+    "npm": "^10.9.0",
     "process": "^0.11.10",
     "prop-types": "^15.8.1",
     "react": "^18.2.0",
